syntax = "proto3";

option java_package = 'grpc';
service RaftCommService {
    rpc RequestVote(RequestVoteReq) returns (RequestVoteResp);
    rpc AppendEntries(AppendEntriesReq) returns (AppendEntriesResp);
    rpc ClientOperate(ClientReq) returns (ClientResp);
}

message RequestVoteReq {
    int64 term = 1;
    int32 candidate_id = 2;
    int64 last_log_index = 3;
    int64 last_log_term = 4;
}

message RequestVoteResp {
    int64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesReq {
    int64 term = 1;
    int32 leader_id = 2;
    int64 pre_log_index = 3;
    int64 pre_log_term = 4;
    repeated Log entries = 5;
    int64 leader_commit = 6;
}

message AppendEntriesResp {
    int64 term = 1;
    bool success = 2;
}

message Log {
    int64 index = 1;
    int64 term = 2;
    bytes data = 3;
    string peer = 4;
}

enum Op {
    Put = 0;
    Get = 1;
    Del = 2;
}

message ClientReq {
    Op op = 1;
    repeated string args = 2;
}

message ClientResp {
    bool success = 1;
    repeated string result = 2;
    string error = 3;
}
